@@ -94,6 +94,7 @@
 59. Combine Output and Playback config pages.
 60. Remove proxy config from settings, and always use system proxy.
     To re-enable proxy settings pass -DENABLE_PROXY_CONFIG=ON to cmake.
+61. Add option to draw curent album cover as backdrop to play queue.
 
 1.0.3
 -----
